integrate mapbox in place of leaflet

--- a/templates/main.html
+++ b/templates/main.html
@@ -23,6 +23,9 @@
     <link rel="apple-touch-icon" href="/divvystat-icon.png">
     <link rel="image_src" href="/thumbnail.png"/>
 
+    <!-- mapbox stylesheet -->
+    <link href="https://api.tiles.mapbox.com/mapbox.js/v2.1.1/mapbox.css" rel="stylesheet" />
+
     <!-- stylesheet -->
     <link href='/style.css' rel='stylesheet' type='text/css'>
 
