restructure with styled footer

--- a/templates/main.html
+++ b/templates/main.html
@@ -38,10 +38,6 @@
         <div class="map" id="map">
         </div>
 
-        <div class="header">
-            <h1>divvystat.us<span class="tagline">: usage and rebalancing metrics</span></h1>
-        </div>
-
         <div class="content">
             <div class="copy">
                 <span class="two-column-copy">
@@ -75,13 +71,18 @@
                 </div>
             </div>
 
-            <div class="footer">
-                <p>This application was originally created for the
-                <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
-                by <a href="http://vicg4rcia.com">Vic Garcia</a>.</p>
-                <p>The source code is on available on
-                <a href="http://github.com/vicgarcia/divvystat">GitHub</a>.</p>
-            </div>
+        </div>
+
+        <div class="header">
+            <h1>divvystat.us</h1>
+        </div>
+
+        <div class="footer">
+            <p>This application was originally created for the
+            <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
+            by <a href="http://vicg4rcia.com">Vic Garcia</a>.</p>
+            <p>The source code is on available on
+            <a href="http://github.com/vicgarcia/divvystat">GitHub</a>.</p>
         </div>
     </div>
 
