use colors to match map

--- a/templates/sass/style.scss
+++ b/templates/sass/style.scss
@@ -15,9 +15,8 @@ $mobile: new-breakpoint(max-width 640px);
 $font-stack: 'Maven Pro', sans-serif;
 
 $default-background-color: #ffffff;
-$widescreen-background-color: #DDE2E3;
-$header-color: #999;
-// $header-color: #00A7E2;
+$widescreen-background-color: #eeeeee;
+$header-color: #d1d1d1;
 
 
 body {
