improvements all around
removed hover labels from graphs
using open sans font
use timeline only in mobile browsers
fix chart title names for simple sake
add auto pan padding to lower right

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.00, maximum-scale=1.00, user-scalable=no' />
 
     <!-- font (via google) -->
-    <link href='//fonts.googleapis.com/css?family=Maven+Pro:400,500,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css' />
 
     <!-- javascript -->
     <script data-main="/main.js" src="/require.js"></script>
@@ -62,11 +62,11 @@
             </div>
 
             <div class="chart">
-                <p>number of concurrent outages in last 72 hours</p>
+                <p>outages in last 72 hours</p>
                 <div class="outage-chart" id="outage-line">
                 </div>
 
-                <p>average concurrent outages over last 30 days</p>
+                <p>average outages over last 30 days</p>
                 <div class="outage-chart" id="outage-bar">
                 </div>
             </div>
