--- a/templates/main.html
+++ b/templates/main.html
@@ -66,7 +66,9 @@
                 <div class="outage-chart" id="outage-line">
                 </div>
 
-                <p>average outages over last 30 days</p>
+                <br/>
+
+                <p>average outages per day in 30</p>
                 <div class="outage-chart" id="outage-bar">
                 </div>
             </div>
