update meta tag for mobile app mode on ios

--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,8 @@
     <meta name='description' content='an interactive map-based application for presentation and metrics of usage and rebalancing performance of the divvy bike sharing system in Chicago, IL' />
 
     <!-- viewport -->
-    <meta name='viewport' content='width=device-width, initial-scale=1.00, maximum-scale=1.00, user-scalable=no' />
+    <meta name='viewport' content='initial-scale=1.00, maximum-scale=1.00, user-scalable=no' />
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- font (via google) -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css' />
