minor syntax tweaks

--- a/templates/main.html
+++ b/templates/main.html
@@ -69,7 +69,7 @@
 
                 <br/>
 
-                <p>average outages per day in 30</p>
+                <p>average outages per day in last 30</p>
                 <div class="outage-chart" id="outage-bar">
                 </div>
             </div>
