--- a/templates/main.html
+++ b/templates/main.html
@@ -45,35 +45,14 @@
                 available at a station over the previous 72 hours.  Data points are omitted
                 when the count doesn't change, creating an effect that draws attention to
                 periods of higher use.</p>
+            </div>
 
-                <span class="two-column-copy">
+            <div class="column">
                 <p>The bar graph on each station popup shows the average usage per day
                 of the week in the last 30 days.  Usage is measured as the number of bikes
                 removed from a station throughout the day.  This metric is an approximate
                 derrived from data collected from Divvy's website.</p>
-                </span>
-
-                <p>The chart and graph <span class="one-column-copy">below</span>
-                <span class="two-column-copy">to the right</span> show data on rebalancing
-                efforts and "outages", which occur when a station is either out of service,
-                has no bikes available, or has no dock spaces available for returns.
-                The line chart shows the number of station outages over the last 72 hours.
-                The bar graph showsthe average number of concurrent outages by day of
-                the week over the last 30 days.</p>
             </div>
-
-            <div class="chart">
-                <p>outages in last 72 hours</p>
-                <div class="outage-chart" id="outage-line">
-                </div>
-
-                <br/>
-
-                <p>average outages per day in last 30</p>
-                <div class="outage-chart" id="outage-bar">
-                </div>
-            </div>
-
         </div>
 
         <div class="footer">
