update google site verification

--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,9 @@
     <meta name='title' content='divvystat.us' />
     <meta name='description' content='an interactive map-based application for presentation and metrics of usage and rebalancing performance of the divvy bike sharing system in Chicago, IL' />
 
+    <!-- google site verification -->
+    <meta name="google-site-verification" content="Ipj3WqrWcfGl07IwDnJjFFs3tMtVlSyIinGUmw02-cc" />
+
     <!-- viewport -->
     <meta name='viewport' content='initial-scale=1.00, maximum-scale=1.00, user-scalable=no' />
     <meta name="apple-mobile-web-app-capable" content="yes">
