minor updates in html template

--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <!-- font (via google) -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css' />
 
     <!-- javascript -->
     <script data-main="/main.js" src="/require.js"></script>
@@ -60,10 +60,10 @@
 
         <div class="footer">
             <p>This application was originally created for the
-            <a href="http://divvybikes.com/datachallenge">Divvy Data Challenge</a>
+            <a href="https://divvybikes.com">Divvy Data Challenge</a>
             by <a href="http://vicg4rcia.com">Vic Garcia</a>.</p>
             <p>The source code is on available on
-            <a href="http://github.com/vicgarcia/divvystat">GitHub</a>.</p>
+            <a href="https://github.com/vicgarcia/divvystat">GitHub</a>.</p>
         </div>
     </div>
 
