remove an old link from the copy

--- a/templates/main.html
+++ b/templates/main.html
@@ -60,8 +60,7 @@
 
         <div class="footer">
             <p>This application was originally created for the
-            <a href="https://divvybikes.com">Divvy Data Challenge</a>
-            by <a href="http://vicg4rcia.com">Vic Garcia</a>.</p>
+            <a href="https://divvybikes.com">Divvy Data Challenge</a>.</p>
             <p>The source code is on available on
             <a href="https://github.com/vicgarcia/divvystat">GitHub</a>.</p>
         </div>
