--- a/templates/main.html
+++ b/templates/main.html
@@ -59,10 +59,8 @@
         </div>
 
         <div class="footer">
-            <p>This application was originally created for the
-            <a href="https://divvybikes.com">Divvy Data Challenge</a>.</p>
-            <p>The source code is on available on
-            <a href="https://github.com/vicgarcia/divvystat">GitHub</a>.</p>
+            <p>This application was originally created for the <a href="https://digital.cityofchicago.org/index.php/congratulations-to-the-winners-of-the-2014-divvy-data-challenge/">2014 Divvy Data Challenge</a>.</p>
+            <p>The source code is on available on <a href="https://github.com/vicgarcia/divvystat">GitHub</a>.</p>
         </div>
     </div>
 
