update title and description

--- a/templates/main.html
+++ b/templates/main.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <title>divvystat.us</title>
-    <meta name='title' content='divvystat.us' />
-    <meta name='description' content='an interactive map-based application for presentation and metrics of usage and rebalancing performance of the divvy bike sharing system in Chicago, IL' />
+    <meta name='title' content='divvystat.us'>
+    <meta name='description' content='an interactive map showing capacity and usage data for Divvy bikeshare in Chicago, IL'>
 
     <!-- google site verification -->
     <meta name="google-site-verification" content="Ipj3WqrWcfGl07IwDnJjFFs3tMtVlSyIinGUmw02-cc" />
