add light status bar for ios pwa

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,8 +12,9 @@
     <meta name="google-site-verification" content="Ipj3WqrWcfGl07IwDnJjFFs3tMtVlSyIinGUmw02-cc" />
 
     <!-- viewport -->
-    <meta name='viewport' content='initial-scale=1.00, maximum-scale=1.00, user-scalable=no' />
+    <meta name='viewport' content='initial-scale=1.00, maximum-scale=1.00, user-scalable=no'>
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
     <!-- font (via google) -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css' />
