improve html formatting

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>divvystat.us</title>
     <meta name='title' content='divvystat.us'>
     <meta name='description' content='an interactive map showing capacity and usage data for Divvy bikeshare in Chicago, IL'>
 
     <!-- google site verification -->
-    <meta name="google-site-verification" content="Ipj3WqrWcfGl07IwDnJjFFs3tMtVlSyIinGUmw02-cc" />
+    <meta name="google-site-verification" content="Ipj3WqrWcfGl07IwDnJjFFs3tMtVlSyIinGUmw02-cc">
 
     <!-- viewport -->
     <meta name='viewport' content='initial-scale=1.00, maximum-scale=1.00, user-scalable=no'>
@@ -17,7 +17,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
     <!-- font (via google) -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css' />
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
 
     <!-- javascript -->
     <script data-main="/main.js" src="/require.js"></script>
@@ -29,7 +29,7 @@
     <link rel="image_src" href="/thumbnail.png"/>
 
     <!-- mapbox stylesheet -->
-    <link href="https://api.tiles.mapbox.com/mapbox.js/v2.1.1/mapbox.css" rel="stylesheet" />
+    <link href="https://api.tiles.mapbox.com/mapbox.js/v2.1.1/mapbox.css" rel="stylesheet">
 
     <!-- stylesheet -->
     <link href='/style.css' rel='stylesheet' type='text/css'>
